--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 spring.application.name=student-management
-spring.datasource.url=jdbc:mysql://localhost:3306/studentdb?createDatabaseIfNotExist=true
+
+# 💾 Connexion MySQL (depuis un conteneur Docker Windows)
+spring.datasource.url=jdbc:mysql://host.docker.internal:3306/studentdb?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-# Server configuration :
+# 🌐 Config serveur web
 server.port=8089
 server.servlet.context-path=/student
